To JDK 25 #2